[ampstart.com] Home and templates page bug fixes  (#645)
* Iframes fix

* cap the image width on templates page
Fix misaligned social follow

*  TEMPLATES page: padding after user clicks on a category

* Fix secondary nav jumping

* Home page header padding

* Updating copy text

--- a/css/www/index/1.0/page.css
+++ b/css/www/index/1.0/page.css
@@ -24,7 +24,7 @@
 .www-index-showcase,
 .www-index-help,
 .ampstart-footer {
-    transform: translateY(-300px);
+    transform: translateY(-250px);
 }
 
 .www-index-showcase-header-img [placeholder] {
